GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

============================================================

PyKota NEWS :

    - 1.16alpha24 :
    
        - Major code refactoring => It is now possible to
          automatically add printers on first print.
        
    - 1.16alpha23 :
    
        - Fixed potential accuracy problem if a user printed on
          several printers at the very same time.
        
    - 1.16alpha22 :
    
        - edpykota now allows adding printers to printer groups
        
    - 1.16alpha21 :
    
        - Allows the dot in user and printer names.
        
        - Printer groups are now cached too.
        
    - 1.16alpha20 :
    
        - Fixed several small bugs with the help of PyChecker.
        
    - 1.16alpha19 :
     
        - Fixed a bug in PostgreSQL backend's code.
        
    - 1.16alpha18 :
    
        - Initial code for printer groups support. Printer groups have
          to be added with external tools like psql or gq for example.
          Printer groups seems to work fine with users. Untested with user 
          groups for now.

        - Several minor visual problems fixed in reports.
        
        - Fixed a bug in LDAP date handling.
        
        - Fix for LDAP problem with some combination of OpenLDAP + Python-LDAP
          + some particular settings.
          
        - mailandpopup.sh shell script added. See sample configuration file
          for details.
        
        - Several environment variables are now exported when executing 
          external commands (accounters, requesters, mailers) :
           
            PYKOTAUSERNAME => user who is printing
            PYKOTAPRINTERNAME => printer on which the job is being sent
            PYKOTATITLE => Job's title